[bug fix] Removed max width for time segment (font grew larger than container and became clipped)

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ canvas {
   justify-content: center;
   font-size: 7vw;
   width: 33vw;
-  max-width: 600px;
+  /* max-width: 600px; */
   min-width: 280px;
   margin-bottom: 20px;
 }
